fixing chat overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,11 @@
 button.lk-close-button.lk-button.lk-chat-toggle {
   display: none;
 }
+ul.lk-list.lk-chat-messages {
+  overflow-y: scroll;
+  height: 78vh;
+}
+
 .egress-body {
   padding: 0;
   font-family: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
